Projetos,Contato, Footer

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="project-descrition">
                     <div class="project-subtitle">
                         <h2>A&C Construtora</h2>
-                        <p> Site Institucional desenvolvido para <br> A&C Construtora e Incorporadora Ltda
+                        <p> Site Institucional desenvolvido para  A&C Construtora e Incorporadora Ltda
                         </p>
                         <span> Este site é totalmente responsivo</span>
                     </div>
@@ -201,23 +201,42 @@
         </div>   
     </div>
 </section>   
-<section class="form-contato">
-    <div class="form">
-         <div class="form-title">
-            <h2>Informações de contato</h2>
-         </div>
-
-         <div class="form-contatos">
-            <ul>
-                <li><a>(41) 998473182</a></li>
-                <li><a>(41) 998473182</a></li>
-                <li><a>(41) 998473182</a></li>
-            </ul>
-         </div>
+<section class="form-contato container">
+    <div class="box-contato">                 
+        <div class="form-content">
+         <div class="box-social">
+            <h1>Informações para contato</h1>
+            <p>renatactba@hotmail.com</p>
+            <p>(41) 99847-3182</p>
+        <div class="social-media">
+            <a href="https://github.com/renataFFC"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/renatafernandesctba/"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.instagram.com/renata_ffc/"><i class='bx bxl-instagram'></i></a>
+            <a href="mailto: renatactba@hotmail.com "><i class='bx bx-envelope'></i></a>
+        </div>
+      </div>
+        <div class="form-contatos">             
+                <form class="form-input" action="" method="POST">
+                        <input type="text" name="name" placeholder="Nome" obrigatório>
+                        <input type="email" name="email" placeholder="email" obrigatório>
+                        <input type="text" name="subject" placeholder="Assunto" obrigatório>
+                        <textarea name="message" placeholder="Digite uma mensagem!">  </textarea>
+                        <div class="btn">
+                            <button class="btn-form" type="submit">Enviar</button>
+                        </div>
+                    </form>
+                </div>          
+        </div>   
+    </div>
     </div>
 
 </section>
-
+<footer>
+    <div class="footer-copy">        
+        <p> Desenvolvido por <strong>Renata Fernandes</strong> </p>
+        <p>2023</p>
+ </div>
+</footer>
   </main>
   <script src="https://kit.fontawesome.com/65f22fe718.js" crossorigin="anonymous"></script>
 </body>
