--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
 
                     <div class="gap-hobbies">
                         <img src="./imagens/icons8-html-5-96.svg" alt="html icon">
-                        <p>HTML</p>
+                        <span class="material-symbols-outlined">
+                            fitness_center
+                            </span>
                     </div>
 
                     <div class="gap-hobbies">
