--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     tecnologia e alta adaptabilidade às mudanças, pronta para superar qualquer desafio!</p>
             </div>
             <figure class="img-sobre">
-                <img src="./assets/imagens/profile-pic (23).png" alt="ilustracao pessoa digitando">
+                <img src="./assets/imagens/Renata.png" alt="ilustracao pessoa digitando">
             </figure>
         </section>
 
@@ -150,7 +150,8 @@
 
                     <div class="gap-hobbies">
                         <img src="./imagens/icons8-html-5-96.svg" alt="html icon">
-                        <span class="material-symbols-outlined">
+                 
+                        <span class="material-symbols-outlined ">
                             fitness_center
                             </span>
                     </div>
